# upgraded-enigma

./: README.md  index.html  notes.txt  style.css
.github/workflows/: ci.yml
archivist/: README.md  archive.html  archive.json  taxonomy.json
archivist/capture/: capture.js
archivist/schema/: entry.schema.json
ios/: DESIGN.md
ios/MorningstarApp/: project.yml
ios/MorningstarApp/Sources/: AppModel.swift  ArchiveView.swift  AuditView.swift  HubView.swift  Info.plist  JourneyView.swift  MorningstarApp.swift  StageViews.swift  Theme.swift
ios/MorningstarKit/: Package.swift
ios/MorningstarKit/Sources/MorningstarKit/: FileEventStore.swift  Integrity.swift  JCS.swift  JSONValue.swift  Leakage.swift  Models.swift
ios/MorningstarKit/Tests/MorningstarKitTests/: CanonicalTests.swift  FileEventStoreTests.swift  (+1 more)
morningstar/: .gitignore  README.md  pyproject.toml
morningstar/docs/: ARCHITECTURE.md
morningstar/docs/experiments/: 001-defender-two-player.md
morningstar/morningstar/: __init__.py  __main__.py  app.py  canonical.py  config.py  export.py  leakage.py  migrations.py  store.py
morningstar/morningstar/templates/: audit.html  base.html  capture_detail.html  capture_new.html  capture_preview.html  chat.html  delete_confirm.html  export.html  index.html  interpretation_detail.html  interpretation_new.html  interpretations.html  settings.html
morningstar/tests/: conftest.py  test_canonical.py  test_experiment_defender.py  test_export.py  test_leakage.py  test_protocol_v02.py  test_store.py  test_web.py
morningstar/tests/golden/: jcs_vectors.json
