[project]
name = "morningstar"
version = "0.1.0"
description = "A provenance-preserving observational instrument for personal, emotional, and epistemic development."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["morningstar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
